Updated on 26 May 2017

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<title>Debashis Barman&mdash; Student | Designer and Developer</title>
+<title>Debashis Barman&mdash; Designer and Developer</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,20 +23,20 @@
 <body onload="geek()" class="db-site" id="debashis-barman">
 
 <header class="db-header clearfix ui-controls ui-controls--hidden-phone">
-<h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
 </header>
 
 <main class="grid db-grid--modified">
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-12 text-align text-align--center">
 <h1 class="db-headline">Debashis Barman</h1>
-<h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
 <div class="db-avatar db-avatar--round"></div>
 <button class="button button--round ui-controls ui-controls--hidden-all">Follow @DebashisBarman</button>
 </div>
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
-<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.<br><br>
+<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.<br><br>
 <span class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</span></p>
 <h2 class="db-subhead">Publication <span class="db-subhead__subtext">/ Peer Reviewed Paper</span></h2>
 <ul class="db-projects-list">
@@ -142,7 +142,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <div class="grid">
 <div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
 <h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
-<p>&copy; Debashis Barman. Last updated on 22 March, 2016.</p>
+<p>&copy; Debashis Barman. Last updated on 26 May, 2017.</p>
 </div>
 </div>
 </footer>
