Updated on 26 May 2017

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <footer class="db-footer clearfix">
 <div class="grid">
 <div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
-<h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
 <p>&copy; Debashis Barman. Last updated on 26 May, 2017.</p>
 </div>
 </div>
