Updated on 26 May 2017

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <h2 class="db-subhead">Basic Information</h2>
 <ul class="li-unstyled">
 <li><strong>Name : </strong>Debashis Barman</li>
-<li><strong>Address : </strong>Assam Don Bosco University, Guwahati, Assam, India, 781017</li>
+<li><strong>Address : </strong>Guwahati, Assam, India, 781034</li>
 <li><strong>Contact : </strong><a href="tel:+91 88 76 342995">+91 88 76 342995</a></li>
 <li><strong>Email : </strong><a href="mailto:deb.dbuniversity@gmail.com">deb.dbuniversity@gmail.com</a></li>
 <li><strong>Website : </strong><a href="http://debashisbarman.in">debashisbarman.in</a></li>
