--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Student. Designer and developer. Passionate programmer. Ocassional blogger.">
-<meta name="keywords" content="Debashis Barman, Student, Designer and developer, Passionate programmer, Ocassional blogger.">
+<meta name="description" content="Student. Designer and developer. Passionate programmer. Tech blogger.">
+<meta name="keywords" content="Debashis Barman, Student, Designer and developer, Passionate programmer, Tech blogger.">
 <meta name="theme-color" content="#eee">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -23,20 +23,20 @@
 <body onload="geek()" class="db-site" id="debashis-barman">
 
 <header class="db-header clearfix ui-controls ui-controls--hidden-phone">
-<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Tech blogger.</small></h2>
 </header>
 
 <main class="grid db-grid--modified">
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-12 text-align text-align--center">
 <h1 class="db-headline">Debashis Barman</h1>
-<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Tech blogger.</small></h2>
 <div class="db-avatar db-avatar--round"></div>
 <button class="button button--round ui-controls ui-controls--hidden-all">Follow @DebashisBarman</button>
 </div>
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
-<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.<br><br>
+<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer and specialize in developing cutting-edge web applications and mobile apps. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and I blog on <a href="http://www.gicbol.com">Gicbol</a>.<br><br>
 <span class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</span></p>
 <h2 class="db-subhead">Publication <span class="db-subhead__subtext">/ Peer Reviewed Paper</span></h2>
 <ul class="db-projects-list">
@@ -77,7 +77,7 @@
 <li>Resource Person, <strong>Session on <q>Graphics Programming in C</q></strong>, Coding Club, Department of Computer Science &amp; Engineering and Information Technology, School of Technology, Assam Don Bosco University</li>
 </ul>
 <h2 class="db-subhead">Miscellaneous</h2>
-<p>I had the priviledge to work on some interesting projects, mostly on web design and development. Some of them are <a href="http://kenmanipur.org">KEN Manipur</a>, <a href="http://northkamrupcollege.in">North Kamrup College</a>, <a href="http://yjayantasingh.in">Dr. Y. Jayanta Singh</a>, <a href="http://surajitbarman.in">Dr. Surajit Barman</a> and <a href="http://prajyukttam.dbu.edu.in">Prajyukttam 2015</a>.</p>
+<p>I had the priviledge to work on some interesting projects, mostly on web design and development. Some of my earlier clients are <a href="http://kenmanipur.org">KEN Manipur 2015</a>, <a href="http://northkamrupcollege.in">North Kamrup College</a>, <a href="http://yjayantasingh.in">Dr. Y. Jayanta Singh</a>, <a href="http://surajitbarman.in">Dr. Surajit Barman</a> and <a href="http://prajyukttam.dbu.edu.in">Prajyukttam 2015</a>.</p>
 <p>I also developed the official android applications for <em>Prajyukttam 2015</em> which was published on <a href="https://play.google.com/store/apps/details?id=in.edu.dbu.prajyukttam.prajyukttam2015">Google Play</a>.</p>
 </div>
 </div>
@@ -92,14 +92,16 @@
 </ul>
 <h2 class="db-subhead">Proficiency <span class="db-subhead__subtext">/ Skills</span></h2>
 <ul class="li-unstyled">
-<li><strong>Programming : </strong>C, C++, Java, Android, Assembly, Shell, Python</li>
-<li><strong>Web Technologies: </strong>HTML, XML, CSS, Bootstrap, Javascript, jQuery, Markdown, PhP</li>
+<li><strong>Programming : </strong>C, C++, Java, Android, Assembly, Shell Scripting</li>
+<li><strong>Web Technologies: </strong>HTML, CSS, JS, SASS, Bootstrap, Node.JS, ExpressJS, AngularJS, PHP, WordPress</li>
 <li><strong>Operating Systems: </strong>Linux (Ubuntu / Fedora / Debian), Windows 7 / Windows XP</li>
 <li><strong>Database : </strong>SQL, MySQL, MongoDB</li>
-<li><strong>Softwares / Tools : </strong>LibreOffice, Microsoft Office, Android Studio, Eclipse, Bluefish, Git, Gimp / Inkscape, PhPMyAdmin</li>
+<li><strong>Softwares / Tools : </strong>Atom, Visual Studio Code, Android Studio, Git, Gimp / Inkscape</li>
 </ul>
 <h2 class="db-subhead">Internship <span class="db-subhead__subtext">/ Training</span></h2>
 <ul class="li-unstyled">
+<li><a href="http://redlooptech.com">Redloop Technologies</a>,<br>
+Junior Full Stack Developer (Intern)</li>
 <li><a href="http://ernet.in">Education and Research Network</a>,<br>
 Department of Electronics and Information Technology, Govt. of India</li>
 </ul>
@@ -122,6 +124,10 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <h3 class="db-projects-list__title">Sofia 1.0.2 (Stable)</h3>
 <p>Sofia (<a href="https://twitter.com/@DigitalSofia">@DigitalSofia</a>) is a Twitter bot written by me in Node.js with Twitter API. (<a href="http://debashisbarman.in/Sofia">Download</a> / <a href="https://medium.com/@DebashisBarman/creating-a-twitter-bot-with-node-js-bea760b80bd5#.bztyizof8">Tutorial</a>)</p>
 </li>
+<li>
+<h3 class="db-projects-list__title">Adda (Online Chat)</h3>
+<p>Adda is a annonymous online chatting application built in Node.js and Socket.io. (<a href="http://debashisbarman.in/Sofia">Download</a> / <a href="https://medium.com/@DebashisBarman/creating-a-twitter-bot-with-node-js-bea760b80bd5#.bztyizof8">Tutorial</a>)</p>
+</li>
 </ul>
 <h2 class="db-subhead">Mentions <span class="db-subhead__subtext">/ Links</span></h2>
 <ul class="li-unstyled">
@@ -141,8 +147,8 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <footer class="db-footer clearfix">
 <div class="grid">
 <div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
-<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
-<p>&copy; Debashis Barman. Last updated on 26 June, 2017.</p>
+<h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Tech blogger.</small></h2>
+<p>&copy; Debashis Barman. Last updated on 17 August, 2017.</p>
 </div>
 </div>
 </footer>
