--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 </li>
 <li>
 <h3 class="db-projects-list__title">Adda (Online Chat)</h3>
-<p>Adda is an anonymous online chatting application built in Node.js and Socket.io. (<a href="http://debashisbarman.in/Sofia">Download</a> / <a href="https://medium.com/@DebashisBarman/creating-a-twitter-bot-with-node-js-bea760b80bd5#.bztyizof8">Tutorial</a>)</p>
+<p>Adda is an anonymous online chatting application built in Node.js and Socket.io. (<a href="http://adda.herokuapp.com">Demo</a>)</p>
 </li>
 </ul>
 <h2 class="db-subhead">Mentions <span class="db-subhead__subtext">/ Links</span></h2>
