--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
-<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer and specialize in developing cutting-edge web applications and mobile apps. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and I blog on <a href="http://www.gicbol.com">Gicbol</a>.<br><br>
+<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance fullstack and mobile developer and specialize in developing cutting-edge web applications and mobile apps. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and I blog on <a href="http://www.gicbol.com">Gicbol</a>.<br><br>
 <span class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</span></p>
 <h2 class="db-subhead">Publication <span class="db-subhead__subtext">/ Peer Reviewed Paper</span></h2>
 <ul class="db-projects-list">
