Updated profile, publication, skills, internship, cv

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <script>
 !function() {
   var t;
-  if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0, 
-  t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+  if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0,
+  t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
   t.factory = function(e) {
     return function() {
       var n;
@@ -32,8 +32,8 @@
     t[e] = t.factory(e);
   }), t.load = function(t) {
     var e, n, o, i;
-    e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"), 
-    o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js", 
+    e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"),
+    o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js",
     n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
   });
 }();
@@ -58,14 +58,14 @@ drift.load('nem9mc2s6v6r');
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
-<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance fullstack and mobile developer and specialize in developing cutting-edge web applications and mobile apps. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and I blog on <a href="http://www.gicbol.com">Gicbol</a>.<br><br>
+<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a Computer Science and Engineering graduate from <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I am currently a Full Stack JavaScript Developer in a development studio in Bengaluru that largely focuses on
+creating awesome apps using NodeJs, React and React Native. Some of my hobby projects are hosted on <a href="https://github.com/debashisbarman/">Github</a>. I sometime blog on <a href="https://medium.com/@DebashisBarman">Medium</a>.<br><br>
 <span class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</span></p>
 <h2 class="db-subhead">Publication <span class="db-subhead__subtext">/ Peer Reviewed Paper</span></h2>
 <ul class="db-projects-list">
 <li>
 <h3 class="db-projects-list__title">A Study on Human Activity Recognition From Video</h3>
-<p>Published in the proceedings of <em><q>10<sup>th</sup> INDIACom : 3<sup>rd</sup> 2016 International Conference on Computing for Sustanable Global Development</q></em>, <a href="http://bvicam.in">Bharati Vidyapeeth's Institute of Computer Applications and Management</a>, Delhi, <em>ISSN 
-0973-7529; ISBN 978-93-80544-20-5</em> (<a href="./assets/AStudyOnHumanActivityRecognitionFromVideo.pdf">pdf</a>)</p>
+<p><strong>Debashis Barman</strong> and Usha Mary Sharma.  “A study on human activity recognition from video.”  Computingfor Sustainable Global Development (INDIACom), 2016 3rd International Conference on.  IEEE (<a href="http://ieeexplore.ieee.org/document/7724781/">Details</a>)</p>
 </li>
 </ul>
 <h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic & Non-academic</span></h2>
@@ -114,16 +114,14 @@ drift.load('nem9mc2s6v6r');
 </ul>
 <h2 class="db-subhead">Proficiency <span class="db-subhead__subtext">/ Skills</span></h2>
 <ul class="li-unstyled">
-<li><strong>Programming : </strong>C, C++, Java, Android, Assembly, Shell Scripting</li>
-<li><strong>Web Technologies: </strong>HTML, CSS, JS, SASS, Bootstrap, Node.JS, ExpressJS, AngularJS, PHP, WordPress</li>
-<li><strong>Operating Systems: </strong>Linux (Ubuntu / Fedora / Debian), Windows 7 / Windows XP</li>
-<li><strong>Database : </strong>SQL, MySQL, MongoDB</li>
-<li><strong>Softwares / Tools : </strong>Atom, Visual Studio Code, Android Studio, Git, Gimp / Inkscape</li>
+<li><strong>Programming : </strong>C, C++, Java, Bash, Assembly (i386)</li>
+<li><strong>Web Technologies: </strong>HTML, CSS, Javascript / ES6, SASS, Bootstrap, React, Redux, Node.js,Express, REST, GraphQL</li>
+<li><strong>Mobile Technologies: </strong>Android, React Native</li>
+<li><strong>Database : </strong>MySQL, PostgreSQL, MongoDB</li>
+<li><strong>Tools / IDE : </strong>Git, NPM, Webpack, Electron, Atom, Nuclide, Android Studio</li>
 </ul>
 <h2 class="db-subhead">Internship <span class="db-subhead__subtext">/ Training</span></h2>
 <ul class="li-unstyled">
-<li><a href="http://redlooptech.com">Redloop Technologies</a>,<br>
-Junior Full Stack Developer (Intern)</li>
 <li><a href="http://ernet.in">Education and Research Network</a>,<br>
 Department of Electronics and Information Technology, Govt. of India</li>
 </ul>
@@ -170,7 +168,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <div class="grid">
 <div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
 <h2 class="db-subhead db-subhead--tagline"><small>Designer and developer. Passionate programmer. Tech blogger.</small></h2>
-<p>&copy; Debashis Barman. Last updated on 17 August, 2017.</p>
+<p>&copy; Debashis Barman. Last updated on 18 November, 2017.</p>
 </div>
 </div>
 </footer>
